# weldsim

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md
run/: input
src/: CMakeLists.txt  Make.package  advance_explicit.cpp  advance_explicit.hpp  advance_implicit.cpp  advance_implicit.hpp  bc.cpp  bc.hpp  heat_source.cpp  heat_source.hpp  level_build.cpp  level_build.hpp  main.cpp  material_properties.cpp  material_properties.hpp  params.cpp  params.hpp  single_level.cpp  single_level.hpp  thermal_solver.cpp  thermal_solver.hpp
